# parking_system

./: .gitignore  LICENSE  README.md  pyproject.toml
numberplate_ukr/: augmentations.py  data.yaml  imageprocessing.py  main.py  train.py
numberplate_ukr/runs/detect/train/: args.yaml  results.csv
numberplate_ukr/textreader/: ocr.py
parking_system/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  requirements.txt
parking_system/nginx/: Dockerfile  nginx.conf
parking_system/nginx/certs/: selfsigned.crt  selfsigned.key
parking_system/numberplate_ukr/: EasyOCR_ukr_plates_recognition.ipynb  convert.py  imageprocessing.py  infomodel.ipynb  main.py  util.py
parking_system/parking/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
parking_system/parking/migrations/: 0001_initial.py  0002_car_fare.py  0003_duration_of_parking.py  0004_car_confirmed.py  0005_parkinginfo_payment.py  0006_ban_reason_car_is_banned.py
parking_system/parking/templates/parking/: 0005_parkinginfo_payment copy.py  ban_list.html  base.html  car_form.html  car_list.html  debtor_list.html  edit_car.html  history.html  index.html  parking.html  parking_goodbye.html  parking_greet.html  parking_wellcome.html  pay.html  (+3 more)
parking_system/parking_system/: asgi.py  settings.py  urls.py  wsgi.py
parking_system/telegrambot/: main.py
parking_system/users/: forms.py  models.py  signals.py  urls.py  views.py
parking_system/users/migrations/: 0001_initial.py
parking_system/utils/: mailing.py  parkingsend.py  tgbotmain.py
(+7 files in other folders)
