[tool.poetry]
name = "parking-system"
version = "0.1.0"
description = "simple crm for automatic parking"
authors = ["Project group 5"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
opencv-python = "^4.10.0.82"
ultralytics = "^8.2.32"
imgaug = "^0.4.0"
telebot = "^0.0.5"
liqpay-sdk-python3 = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
